tests/NormalTests/paczka2/big_fuzzy/78681086.err
Error in line 12: wW0Nwr5 A161 26,1
Error in line 10: A77 A161 59,1
Error in line 26: iVKKxFBtz A161 12,2
Error in line 32: wsI A77 51,8
Error in line 42: iVKKxFBtz S285 39,0
Error in line 62: bWIel1Hxm S59 -1,6
Error in line 61: bWIel1Hxm S59 12,0
Error in line 69: wW0Nwr5 A161 27,4
Error in line 70: bWIel1Hxm S285 47,8
Error in line 81: iVKKxFBtz S59 69,19
Error in line 72: bWIel1Hxm A161 1,5
Error in line 93: bWIel1Hxm S285 91,3
Error in line 97: HjQU A77 10,3
Error in line 96: bWIel1Hxm S59 70,3
Error in line 102: wsI A161 204,7
Error in line 100: bWIel1Hxm A77 83,9
Error in line 99: HjQU A161 51,0
Error in line 89: iVKKxFBtz S59 172,9
Error in line 110: iVKKxFBtz S285 69,4
Error in line 115: wW0Nwr5 S285 68,3
Error in line 119: wsI A77 85,1
Error in line 124: bWIel1Hxm A161 38,7
Error in line 131: bWIel1Hxm S285 25,5
Error in line 128: HjQU A77 63,2
Error in line 137: QfvzUb5 A77 85,9
Error in line 127: A77 S59 296,6
Error in line 144: QfvzUb5 S59 38,7
Error in line 142: HjQU S285 211,3
Error in line 153: QfvzUb5 A161 70,4
Error in line 162: A77 A77 87,3
Error in line 143: iVKKxFBtz S285 3,0
Error in line 163: QfvzUb5 A77 34,3
Error in line 171: A77 A161 86,3
Error in line 187: A77 S59 49,8
Error in line 177: wW0Nwr5 A77 84,3
Error in line 223: iVKKxFBtz A161 41,3
Error in line 209: wsI S285 40,5
Error in line 230: wW0Nwr5 S2A5 66,4
Error in line 220: A77 A161 55,6
Error in line 240: QfvzUb5 S285 139,87
Error in line 239: QfvzUb5 S285 65,9
Error in line 245: wsI A77 2,7
